# tcp-message-server

./: .gitignore  CMakeLists.txt
include/client/: client.h
include/network/: connection.h  send_receive_manager.h
include/server/: server.h
res/forms/: send_receive_manager.ui
src/: main.cpp
src/client/: client.cpp  client.h
src/network/: connection.cpp  connection.h  send_receive_manager.cpp  send_receive_manager.h  send_receive_manager.ui
src/network/ui/: ui_send_receive_manager.h
src/server/: server.cpp  server.h
